--- a/编程猫.md
+++ b/编程猫.md
@@ -2,6 +2,8 @@
 
 一家规模还挺大的公司，在铁路公园地铁站附近，信利康大厦，全员几千人，开发200多，深圳这块的办公有7层楼，所以，办公条件什么的，都算不错。
 
+做儿童编程教育的，以游戏的形式让孩子玩儿，用技术转换成代码，应该算既有趣又有挑战的工作，想换工作的可以考虑。
+
 ## 题目
 
 - 自我介绍
