--- a/编程猫.md
+++ b/编程猫.md
@@ -23,3 +23,5 @@
 
 因为隔了两天，问题有点记不清了，大概记这些，虽然看着没有难点，也正因如此吧，很多回答就草率了（我以为大餐在后面），染鹅后面没了，这次失利完全是自己的问题，发挥太差，下一站认真对待继续加油吧。
 
+总结一点经验，不要因为觉得公司怎样，或者面试官说话语气怎样，就掉以轻心，如果是你想去的地方，就尽力发挥，把自己的经历和能力充分展示出来，才可能一步步接近成功。
+
